Fix z-index issue and unsubscribe from auth listener

--- a/src/components/molecules/molecules.module.css
+++ b/src/components/molecules/molecules.module.css
@@ -525,7 +525,6 @@
     justify-content: center;
     align-items: center;
     height: calc(100dvh - 300px);
-    z-index: 200;
 }
 
 .errContainer .err {
